# human_robot_collaboration

./: .gitignore  LICENSE  README.md  new_manual.txt
code/despot_POMDP_robot/: CMakeLists.txt  Makefile  README.md
code/despot_POMDP_robot/examples/pomdpx_models/: Makefile
code/despot_POMDP_robot/examples/pomdpx_models/data/: pomdp_FINAL.pomdpx  proactive_robot_pomdp.pomdpx
code/despot_POMDP_robot/include/despot/: evaluator.h  simple_tui.h
code/despot_POMDP_robot/include/despot/core/: belief.h  lower_bound.h  policy.h  pomdp.h  solver.h
code/despot_POMDP_robot/include/despot/solver/: despot.h
code/despot_POMDP_robot/src/: evaluator (copy).cpp  evaluator.cpp  simple_tui.cpp
code/despot_POMDP_robot/src/core/: belief.cpp  pomdp.cpp  solver.cpp
code/despot_POMDP_robot/src/pomdpx/: pomdpx.cpp
code/despot_POMDP_robot/src/solver/: despot.cpp
code/ros_ws/src/hrc_ros/: CMakeLists.txt  CMakeLists_Uncommented_for_Decision_PC.txt  package.xml
code/ros_ws/src/hrc_ros/include/helper_functions/: Json_parser.h
code/ros_ws/src/hrc_ros/include/hrc_task_manager/: HRCTaskManager.h
code/ros_ws/src/hrc_ros/include/human_agent/: HumanAgent.h
code/ros_ws/src/hrc_ros/include/notifyTrayUpdate/: notifyTrayUpdate.h
code/ros_ws/src/hrc_ros/include/observation_agent/: ObservationAgent.h  ObservationAgent_IExperiment.h
code/ros_ws/src/hrc_ros/include/robot_agent/: RobotAgent.h
code/ros_ws/src/hrc_ros/include/robot_motion_agent_IE/: RobotMotionAgent_IE.h
code/ros_ws/src/hrc_ros/include/task_manager/: TaskManager.h  TaskManager_IExperiment.h
code/ros_ws/src/hrc_ros/include/test_agents_IE/: TestAgent.h
code/ros_ws/src/hrc_ros/launch/: IE_Camera_PC.launch  IE_Decision_PC.launch  IE_ExperimentNoRobot.launch  IE_ExperimentNodes.launch  IE_detection_only.launch  IE_experiment.launch  IE_experiment_noCamera.launch  Record_IE_experiment.launch  action_recognition.launch  convert_bag_jpeg.launch  eval_pomdp_IE.launch  hrc.launch  hrc_IE.launch  hrc_IE_minimal.launch  hrc_nodes.launch  intheloop_recordonly.launch  launch_pomdp_in_the_loop.launch  launch_pomdp_test.sh  object_tracking_nodes.launch  observation_tests.launch  reactive_robot.launch  record_hrc_IE.launch  record_hrc_IE_NoConveyor.launch  record_pomdp_in_the_loop.launch  test_scenarios_IE.csv
code/ros_ws/src/hrc_ros/model_scripts/: MDP_human_distracted.sh  MDP_human_general.sh  MDP_human_thinker.sh  MDP_human_v2.sh  MDP_robot_reactive.sh  POMDP_robot.sh  POMDP_robot_general.sh  POMDP_robot_proactive.sh  python_robot_reactive.sh  reactive_robot_server.py  test_human_client.py  test_mdp_server.py  test_pomdp_client.py  test_pomdp_client_IE.py  test_pomdp_server.py
code/ros_ws/src/hrc_ros/model_scripts/old/: MDP_human_expert.sh  MDP_human_stubborn.sh  MDP_human_tired.sh
code/ros_ws/src/hrc_ros/msg/: HeadGestureMsg.msg  HumanUpdateMsg.msg  ObjectGraspColourMsg.msg  ObsUpdateMsg.msg  ObsUpdateMsgIE.msg  PublishActionRecognisedMsg.msg  PublishTrayUpdateMsg.msg  RobotUpdateMsg.msg  SuccessStatusObserved.msg  TaskState.msg  TaskStateIE.msg  TraySensor.msg  TrayUpdateCamera.msg
code/ros_ws/src/hrc_ros/src/: hrc_human_sil.cpp  hrc_obs.cpp  hrc_obs_sil.cpp  hrc_obs_v0.cpp  hrc_robot_sil.cpp
code/ros_ws/src/hrc_ros/src/Experiment_agents/: experiment_1_expressiveness.py
code/ros_ws/src/hrc_ros/src/Test_agents_IE/: test_decision_trigger.cpp
code/ros_ws/src/hrc_ros/src/bagfile_stimuli_extractor/: bagfile_extractor.py
code/ros_ws/src/hrc_ros/src/cmab/: BayesianExpert.py  CMAB.py  SVM.py  binUpdate.py
code/ros_ws/src/hrc_ros/src/experiment_monitor/: NotifyTrayUpdateSound.cpp  NotifyTrayUpdateSoundNode.cpp  experimentMonitor.cpp
code/ros_ws/src/hrc_ros/src/helper_functions/: Json_parser.cpp
code/ros_ws/src/hrc_ros/src/hrc_task_manager/: HRCTaskManager.cpp  HRCTaskManagerNode.cpp  HRCTaskManager_org.cpp
code/ros_ws/src/hrc_ros/src/human_agent/: HumanAgent.cpp  HumanAgentNode.cpp
code/ros_ws/src/hrc_ros/src/human_mc_sampler/: human_mc_sampler.py
code/ros_ws/src/hrc_ros/src/human_simulator/: human_sim_noMorse.py
code/ros_ws/src/hrc_ros/src/observation_agent/: ObservationAgent.cpp  ObservationAgentNode.cpp  ObservationAgentNode_IExperiment.cpp  ObservationAgent_IExperiment.cpp
code/ros_ws/src/hrc_ros/src/package_generator/: PackageManipulator.py
code/ros_ws/src/hrc_ros/src/policy_evaluator/: policy_evaluator.py
code/ros_ws/src/hrc_ros/src/policy_selector_bpr/: BPR_training_set_creation.py  README.md  abps_savings.json  json_read.py  policy_selector_bpr.py  training_set_creation_fromCSV.py
code/ros_ws/src/hrc_ros/src/results_to_excel/: results_to_excel.py
code/ros_ws/src/hrc_ros/src/robot_agent/: RobotAgent.cpp  RobotAgentNode.cpp  RobotAgent_pomdp_eval.cpp
code/ros_ws/src/hrc_ros/src/robot_motion_agent_IE/: DobotWorkerNode.cpp  RobotMotionAgentNode_IE.cpp  RobotMotionAgent_IE.cpp  reactive_robot_DM_agent.py  reactive_robot_dm.py
code/ros_ws/src/hrc_ros/src/robot_simulator/: robot_sim_noMorse.py
code/ros_ws/src/hrc_ros/src/rule_monitor/: ruleMonitorNode.cpp  (+1 more)
code/ros_ws/src/hrc_ros/srv/: DisplayScoring.srv  DisplayTaskRule.srv  DisplayTaskStatus.srv  DrawNewStateMC.srv  GetInfraredSensor.srv  InformHumanAction.srv  InformHumanState.srv  InformHumanToTaskMang.srv  InformObsToTaskMang.srv  InformObsToTaskMangIE.srv  InformRobotToTaskMang.srv  InformTrayUpdate.srv  PolicySelectorBPR.srv  RequestSuccessCriteria.srv  ResetContainer.srv  ResetObsROS.srv  ResetRobotROS.srv  SelectPolicy.srv  SetTaskNumber.srv
code/ros_ws/src/object_tracking/: CMakeLists.txt  ReadMe.md  package.xml  setup_
code/ros_ws/src/object_tracking/launch/: tracking.launch
code/ros_ws/src/object_tracking/msg/: NineD.msg  Subfeatures.msg
code/ros_ws/src/object_tracking/settings/: rules.txt  settings.txt
code/ros_ws/src/object_tracking/src/: classify.cpp  depth_show.cpp  e_activity_recognition_continousHMM.py  feature_processer.cpp  image_show.cpp  nined_receiver.cpp  object_tracking.cpp  tray_observer.cpp
code/ros_ws/src/object_tracking/srv/: Feature.srv  InformActionRecognized.srv  InformTrayUpdate.srv  TrayUpdateCamera.srv
(+3138 files in other folders)
